{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 156,
  "lineage": "5c464c3c-5c43-95e6-6fb1-e04ef35c3a11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09757e8c9b2ba5eef",
            "arn": "arn:aws:ec2:us-east-1:767828742181:instance/i-085b529e002937e23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "profile-simulator-a3julceus6",
            "id": "i-085b529e002937e23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "capstone",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0479c22c2bb3e24e5"
              }
            ],
            "primary_network_interface_id": "eni-0479c22c2bb3e24e5",
            "private_dns": "ip-10-1-1-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.39",
            "public_dns": "ec2-44-211-151-9.compute-1.amazonaws.com",
            "public_ip": "44.211.151.9",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:767828742181:key/3274c7c1-46bf-4e23-9965-6e8afcbd2d71",
                "throughput": 125,
                "volume_id": "vol-0b95dbd6908e06f0b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038ce4e4380b62d26",
            "tags": {
              "Name": "ec2-simulator-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "Name": "ec2-simulator-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01980fdf760831091"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767828742181",
            "id": "i-085b529e002937e23",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.simulator",
            "aws_iam_role.simulator",
            "aws_key_pair.capstone",
            "aws_security_group.simulator",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_kms_alias.main",
            "tls_private_key.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828742181:internet-gateway/igw-0ae2f3ecafc521707",
            "id": "igw-0ae2f3ecafc521707",
            "owner_id": "767828742181",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "Name": "igw-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "vpc_id": "vpc-04c0143060634bbd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828742181:route-table/rtb-0fd34a98fe4d7042e",
            "id": "rtb-0fd34a98fe4d7042e",
            "owner_id": "767828742181",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae2f3ecafc521707",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "Name": "rt-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0143060634bbd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767828742181",
            "id": "rtb-0fd34a98fe4d7042e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c904578ab6581b3",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd34a98fe4d7042e",
            "subnet_id": "subnet-038ce4e4380b62d26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "simulator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828742181:security-group/sg-01980fdf760831091",
            "description": "Allow SSH access to simulator EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01980fdf760831091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "simulator-sg-a3julceus6",
            "name_prefix": "",
            "owner_id": "767828742181",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0143060634bbd8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767828742181",
            "id": "sg-01980fdf760831091",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828742181:subnet/subnet-038ce4e4380b62d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038ce4e4380b62d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767828742181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-simulator-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "Name": "subnet-simulator-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "vpc_id": "vpc-04c0143060634bbd8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767828742181",
            "id": "subnet-038ce4e4380b62d26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828742181:vpc/vpc-04c0143060634bbd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c646f07b91eb64b2",
            "default_route_table_id": "rtb-02bd8a1b086a7995c",
            "default_security_group_id": "sg-0281ac860abbe044a",
            "dhcp_options_id": "dopt-05aebf49c5277720c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c0143060634bbd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bd8a1b086a7995c",
            "owner_id": "767828742181",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            },
            "tags_all": {
              "Name": "vpc-sales-a3julceus6",
              "environment": "dev",
              "managed_by": "terraform",
              "project": "sales-intelligence"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "767828742181",
            "id": "vpc-04c0143060634bbd8",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}